network_console_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: skupper-network-observer-tls
  labels:
    app.kubernetes.io/instance: skupper-network-observer
    app.kubernetes.io/name: network-observer
    app.kubernetes.io/part-of: skupper-network-observer
    app.kubernetes.io/version: 2.1.1
  name: skupper-network-observer
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/instance: skupper-network-observer
    app.kubernetes.io/name: network-observer
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: skupper-network-observer
    app.kubernetes.io/name: network-observer
    app.kubernetes.io/part-of: skupper-network-observer
    app.kubernetes.io/version: 2.1.1
  name: skupper-network-observer
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: skupper-network-observer
      app.kubernetes.io/name: network-observer
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: skupper-network-observer
        app.kubernetes.io/name: network-observer
        app.kubernetes.io/part-of: skupper-network-observer
        app.kubernetes.io/version: 2.1.1
    spec:
      containers:
      - args:
        - -listen=127.0.0.1:8080
        - -prometheus-api=http://127.0.0.1:9090
        - -router-endpoint=amqps://skupper-router-local
        - -router-tls-ca=/etc/messaging/ca.crt
        - -router-tls-cert=/etc/messaging/tls.crt
        - -router-tls-key=/etc/messaging/tls.key
        command:
        - /app/network-observer
        image: registry.redhat.io/service-interconnect/skupper-network-observer-rhel9@sha256:2f46829b378524b8d880d9187a90f74fa735227357a409aaa69d197545eba72d
        imagePullPolicy: Always
        name: network-observer
        ports:
        - containerPort: 8080
          name: api
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /etc/messaging/
          name: skupper-management-client
      - args:
        - --https-address=:8443
        - --provider=openshift
        - --openshift-service-account=skupper-network-observer
        - --upstream=http://127.0.0.1:8080
        - -tls-cert=/etc/certificates/tls.crt
        - -tls-key=/etc/certificates/tls.key
        - --cookie-secret=33s7JIIEi8fHj9swsv7Ak6GWXvL20PbW
        image: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:8ce44de8c683f198bf24ba36cd17e89708153d11f5b42c0a27e77f8fdb233551
        imagePullPolicy: IfNotPresent
        name: proxy
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /etc/certificates/
          name: skupper-network-observer-tls
      - args:
        - --config.file=/etc/prometheus/prometheus.yml
        - --storage.tsdb.path=/prometheus/
        image: registry.redhat.io/openshift4/ose-prometheus@sha256:05216a666782a10b81d02c0421084a8d67023ac4d705f578632d9dbe79875ae3
        imagePullPolicy: IfNotPresent
        name: prometheus
        ports:
        - containerPort: 9090
          name: prom
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /etc/prometheus
          name: prometheus-config
        - mountPath: /prometheus
          name: prometheus-storage-volume
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: skupper-network-observer
      volumes:
      - configMap:
          defaultMode: 420
          name: skupper-network-observer-prometheus
        name: prometheus-config
      - emptyDir: {}
        name: prometheus-storage-volume
      - name: skupper-management-client
        secret:
          defaultMode: 420
          secretName: skupper-network-observer-client
      - name: skupper-network-observer-tls
        secret:
          defaultMode: 420
          secretName: skupper-network-observer-tls
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: skupper-network-observer
    app.kubernetes.io/name: network-observer
    app.kubernetes.io/part-of: skupper-network-observer
    app.kubernetes.io/version: 2.1.1
  name: skupper-network-observer
spec:
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: skupper-network-observer
    weight: 100
